- updated API docs - fix TokenAuthenticator - add support for logout
